# CoAP-simple-library

./: .gitignore  CMakeLists.txt  coap-simple.cpp  coap-simple.h  coap_retransmit.cpp  coap_retransmit.h
examples/esp32/: esp32.ino
examples/esp32/esp32client/esp32client.ino/: esp32client.ino.ino
examples/esp32/esp32server/: esp32server.ino
